syntax = "proto3";

package berty.entity;

option go_package = "github.com/berty/berty/core/entity";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "entity/contact.proto";

message Config {
  //
  // gorm required fields
  //

  string id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // myself
  //

  Contact myself = 5;
  string myself_id = 6 [(gogoproto.customname) = "MyselfID"];
}